5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3858/executions/1752_1523.log
== SUBMITION (2019-05-16 17:39:36) 
-- CODE:
qtd = int(input())
semana = 0
while(qtd<200):
	qtdn = int(input())
	qtdx = int(input())
	qtd = qtd + qtdn - qtdx
	semana = semana +1
print(semana)
	

-- EXECUTION TIME:
0.259821
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:39:52) 
-- CODE:
qtd = int(input())
semana = 0
while(qtd<200):
	qtdn = int(input())
	qtdx = int(input())
	qtd = qtd + qtdn - qtdx
	semana = semana +1
print(semana)
	

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:40:31) 
-- CODE:
qtd = int(input())
semana = 0
while(qtd<200):
	qtdn = int(input())
	qtdx = int(input())
	qtd = qtd + qtdn - qtdx
	semana = semana +1
	
	
	
print(semana)
	

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:40:41) 
-- CODE:
qtd = int(input())
semana = 0
while(qtd<200):
	qtdn = int(input())
	qtdx = int(input())
	qtd = qtd + qtdn - qtdx
	semana = semana +1
	
	
	
print(semana)
	

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:41:37) 
-- CODE:
qtd = int(input())
semana = 0
while(qtd<200):
	qtdn = int(input())
	qtdx = int(input())
	qtd = qtd + qtdn - qtdx
	semana = semana +1
	
	
	
print(semana)
	

-- EXECUTION TIME:
0.276003
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:41:42) 
-- CODE:
qtd = int(input())
semana = 0
while(qtd<200):
	qtdn = int(input())
	qtdx = int(input())
	qtd = qtd + qtdn - qtdx
	semana = semana +1
	
	
	
print(semana)
	

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:43:47) 
-- CODE:
qtd = int(input())
qtdn = int(input())
qtdx = int(input)
semana = 1
while(qtd<200):
	qtd = qtd + qtdn - qtdx
	qtdn = int(input())
	qtdx = int(input())

semana = semana +1
	
	
	
print(semana)
	

-- EXECUTION TIME:
0.203651
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1752/1523/main.py", line 3, in <module>
    qtdx = int(input)
TypeError: int() argument must be a string or a number, not 'builtin_function_or_method'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:44:44) 
-- CODE:
qtd = int(input())

semana = 0
while(qtd<200):
	qtdn = int(input())
	qtdx = int(input())
	qtd = qtd + qtdn - qtdx
	semana = semana +1
	
	
print(semana)
	

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:45:13) 
-- CODE:
qtd = int(input())

semana = 0
while(qtd<200):
	qtdn = int(input())
	qtdx = int(input())
	qtd = qtd + qtdn - qtdx
	semana = semana +1
	
	
print(semana)
	

-- EXECUTION TIME:
0.183233
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:46:10) 
-- CODE:
qtd = int(input())
qtdn = int(input())
qtdx = int(input())

semana = 0
while(qtd<200):
	qtdn = int(input())
	qtdx = int(input())
	qtd = qtd + qtdn - qtdx
	semana = semana +1
	
	
print(semana)
	

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:46:17) 
-- CODE:
qtd = int(input())
qtdn = int(input())
qtdx = int(input())

semana = 0
while(qtd<200):
	qtdn = int(input())
	qtdx = int(input())
	qtd = qtd + qtdn - qtdx
	semana = semana +1
	
	
print(semana)
	

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:46:27) 
-- CODE:
qtd = int(input())
qtdn = int(input())
qtdx = int(input())

semana = 0
while(qtd<200):
	qtdn = int(input())
	qtdx = int(input())
	qtd = qtd + qtdn - qtdx
	semana = semana +1
	
	
print(semana)
	

-- EXECUTION TIME:
0.156518
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:46:50) 
-- CODE:
qtd = int(input())
qtdn = int(input())
qtdx = int(input())

semana = 0
while(qtd<200):
	semana = semana +1
	qtdn = int(input())
	qtdx = int(input())
	qtd = qtd + qtdn - qtdx
	semana = semana +1
	
	
print(semana)
	

-- EXECUTION TIME:
0.233464
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:46:59) 
-- CODE:
qtd = int(input())
qtdn = int(input())
qtdx = int(input())

semana = 0
while(qtd<200):
	semana = semana +1
	qtdn = int(input())
	qtdx = int(input())
	qtd = qtd + qtdn - qtdx
	
	
print(semana)
	

-- EXECUTION TIME:
0.291719
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:47:20) 
-- CODE:
qtd = int(input())
qtdn = int(input())
qtdx = int(input())

semana = 0
while(qtd<200 and qtd>0):
	semana = semana +1
	qtdn = int(input())
	qtdx = int(input())
	qtd = qtd + qtdn - qtdx
	
	
print(semana)
	

-- EXECUTION TIME:
0.186781
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:48:21) 
-- CODE:
qtd = int(input())
qtdn = int(input())
qtdx = int(input())
qtd = qtd + qtdn - qtdx
semana = 0
while(qtd<200 and qtd>0):
	semana = semana +1
	qtdn = int(input())
	qtdx = int(input())
	qtd = qtd + qtdn - qtdx
	
	
print(semana)
	

-- EXECUTION TIME:
0.238779
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:48:34) 
-- CODE:
qtd = int(input())
qtdn = int(input())
qtdx = int(input())
qtd = qtd + qtdn - qtdx
semana = 0
while(qtd<200 and qtd>0):

	qtdn = int(input())
	qtdx = int(input())
	qtd = qtd + qtdn - qtdx
	semana = semana + 1
	
	
print(semana)
	

-- EXECUTION TIME:
0.180344
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:48:46) 
-- CODE:
qtd = int(input())
qtdn = int(input())
qtdx = int(input())
qtd = qtd + qtdn - qtdx
semana = 0
while(qtd<200 and qtd>0):

	qtdn = int(input())
	qtdx = int(input())
	qtd = qtd + qtdn - qtdx
	semana = semana + 1
	
	
print(semana)
	

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:48:58) 
-- CODE:
qtd = int(input())
qtdn = int(input())
qtdx = int(input())
qtd = qtd + qtdn - qtdx
semana = 0
while(qtd<200 and qtd>0):

	qtdn = int(input())
	qtdx = int(input())
	qtd = qtd + qtdn - qtdx
	semana = semana + 1
	
	
print(semana)
	

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:49:53) 
-- CODE:
qtd = int(input())
qtdn = int(input())
qtdx = int(input())
qtd = qtd + qtdn - qtdx
semana = 0
while(qtd<200 and qtd>0):

	qtdn = int(input())
	qtdx = int(input())
	qtd = qtd + qtdn - qtdx
	semana = semana + 1
	
	
print(semana)
	

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:50:20) 
-- CODE:
qtd = int(input())
qtdn = int(input())
qtdx = int(input())
qtd = qtd + (qtdn - qtdx)
semana = 0
while(qtd<200 and qtd>0):

	qtdn = int(input())
	qtdx = int(input())
	qtd = qtd + qtdn - qtdx
	semana = semana + 1
	
	
print(semana)
	

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:50:39) 
-- CODE:
qtd = int(input())
qtdn = int(input())
qtdx = int(input())
qtd = qtd + (qtdn - qtdx)
semana = 0
while(qtd<200 and qtd>0):

	qtdn = int(input())
	qtdx = int(input())
	qtd = qtd + qtdn - qtdx
	semana = semana + 1
	
	
print(semana)
	

-- EXECUTION TIME:
0.216911
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:51:02) 
-- CODE:
qtd = int(input())
qtdn = int(input())
qtdx = int(input())
qtd = qtd + (qtdn - qtdx)
semana = 0
while(qtd<=200 and qtd>0):

	qtdn = int(input())
	qtdx = int(input())
	qtd = qtd + qtdn - qtdx
	semana = semana + 1
	
	
print(semana)
	

-- EXECUTION TIME:
0.125408
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:52:35) 
-- CODE:
qtd = int(input())
qtdn = int(input())
qtdx = int(input())
qtd1 = qtd + (qtdn - qtdx)
semana = 0
while(qtd1<200 and qtd1>0):

	qtdn = int(input())
	qtdx = int(input())
	qtd1 = qtd1 + qtdn - qtdx
	semana = semana + 1

	
print(semana)
	

-- EXECUTION TIME:
0.148795
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:53:40) 
-- CODE:
qtd = int(input())
qtdn = int(input())
qtdx = int(input())
qtd1 = qtd + (qtdn - qtdx)
if(qtd1>200):
	semana = 0
else:
	semana = 1
while(qtd1<200 and qtd1>0):

	qtdn = int(input())
	qtdx = int(input())
	qtd1 = qtd1 + qtdn - qtdx
	semana = semana + 1

	
print(semana)
	

-- EXECUTION TIME:
0.143518
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
1
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:54:23) 
-- CODE:
qtd = int(input())
qtdn = int(input())
qtdx = int(input())
qtd1 = qtd + (qtdn - qtdx)
if(qtd1>200):
	semana = 0
else:
	semana = 1
while(qtd1<200 and qtd1>0):

	qtdn = int(input())
	qtdx = int(input())
	qtd1 = qtd1 + qtdn - qtdx
	semana = semana + 1

	
print(semana)
	

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:54:34) 
-- CODE:
qtd = int(input())
qtdn = int(input())
qtdx = int(input())
qtd1 = qtd + (qtdn - qtdx)
if(qtd1>200):
	semana = 0
else:
	semana = 1
while(qtd1<200 and qtd1>0):

	qtdn = int(input())
	qtdx = int(input())
	qtd1 = qtd1 + qtdn - qtdx
	semana = semana + 1

	
print(semana)
	

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:55:20) 
-- CODE:
qtd = int(input())
while(qtd1<200 and qtd1>0):

	qtdn = int(input())
	qtdx = int(input())
	qtd1 = qtd1 + qtdn - qtdx
	semana = semana + 1

	
print(semana)
	

-- EXECUTION TIME:
0.2196
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1752/1523/main.py", line 2, in <module>
    while(qtd1<200 and qtd1>0):
NameError: name 'qtd1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:55:31) 
-- CODE:
qtd = int(input())
semana = 0
while(qtd1<200 and qtd1>0):

	qtdn = int(input())
	qtdx = int(input())
	qtd1 = qtd1 + qtdn - qtdx
	semana = semana + 1

	
print(semana)
	

-- EXECUTION TIME:
0.139396
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1752/1523/main.py", line 3, in <module>
    while(qtd1<200 and qtd1>0):
NameError: name 'qtd1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:55:43) 
-- CODE:
qtd = int(input())
semana = 0
while(qtd1<200 and qtd1>0):

	qtdn = int(input())
	qtdx = int(input())
	qtd = qtd + qtdn - qtdx
	semana = semana + 1

	
print(semana)
	

-- EXECUTION TIME:
0.210892
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1752/1523/main.py", line 3, in <module>
    while(qtd1<200 and qtd1>0):
NameError: name 'qtd1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:56:16) 
-- CODE:
qtd = int(input())
qtdn = int(input())
qtdx = int(input())
qtd = qtd + qtdn - qtdx
semana = 0
while(qtd<200 and qtd>0):
	semana = semana +1
	qtdn = int(input())
	qtdx = int(input())
	qtd = qtd + qtdn - qtdx
	semana = semana + 1
	
	
print(semana)
	

-- EXECUTION TIME:
0.1547
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
